<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <cn.dlc.commonlibrary.ui.widget.TitleBar
        android:id="@+id/titlebar"
        style="@style/CommonTitleBarStyle"
        app:titleText="@string/ceshigongju"/>

    <EditText
        android:id="@+id/et_num"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_100dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/normal_30dp"
        android:layout_marginTop="@dimen/normal_20dp"
        android:textSize="@dimen/normal_30sp"
        android:textColor="@color/color_333"
        android:hint="请输入蓝牙锁机号"/>


    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_100dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/normal_30dp"
        android:layout_marginTop="@dimen/normal_20dp"
        android:textSize="@dimen/normal_30sp"
        android:textColor="@color/color_333"
        android:hint="请输入蓝牙锁地址"/>


    <Button
        android:id="@+id/btn_sure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_100dp"
        android:layout_marginLeft="@dimen/normal_30dp"
        android:layout_marginRight="@dimen/normal_30dp"
        android:layout_marginTop="@dimen/normal_50dp"
        android:background="@drawable/button_shape"
        android:textSize="@dimen/normal_36sp"
        android:textColor="@color/white"
        android:text="@string/queding"/>

    <Button
        android:id="@+id/btn_canle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_100dp"
        android:layout_marginLeft="@dimen/normal_30dp"
        android:layout_marginRight="@dimen/normal_30dp"
        android:layout_marginTop="@dimen/normal_30dp"
        android:background="@drawable/button_shape"
        android:textSize="@dimen/normal_36sp"
        android:textColor="@color/white"
        android:text="@string/tiaoguo"/>

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_100dp"
        android:layout_marginLeft="@dimen/normal_30dp"
        android:layout_marginRight="@dimen/normal_30dp"
        android:layout_marginTop="@dimen/normal_30dp"
        android:background="@drawable/button_shape"
        android:textSize="@dimen/normal_36sp"
        android:textColor="@color/white"
        android:text="@string/saomiaoerweima"/>
</LinearLayout>